--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ form button:hover {
 
   <section class="hero">
     <div class="container">
-      <img src="assets/your-image.jpeg" alt="Rishabh Sanjay Dubey" />
+      <img src="assets\your-image.jpeg" alt="Rishabh Sanjay Dubey" />
       <h1></h1>
       <p>I’m a Computer Science graduate passionate about turning code into craft. I create responsive, dynamic, and human-centered digital experiences.</p>
     </div>
