--- a/index.html
+++ b/index.html
@@ -208,15 +208,15 @@ form button:hover {
     <div class="row g-4">
       <div class="col-md-6">
         <div class="project-card">
-          <h4>🎵 Music Downloader</h4>
-          <p>A web app built using Saavn API to download songs easily. Designed a clean UI and integrated Flask for backend management. Used languages like HTML, CSS, and JavaScript for the frontend, and Python with Flask for the backend.</p>
-          <a href="https://github.com/rishu143-ai/music-downloader" target="_blank">View Project</a>
+          <h4>🎵 Music Explorer</h4>
+          <p>A web app built using Saavn API to explore and discover music easily. Designed a clean UI and integrated Flask for backend management.</p>
+          <a href="https://github.com/rishu143-ai/music-explorer" target="_blank">View Project</a>
         </div>
       </div>
       <div class="col-md-6">
         <div class="project-card">
           <br>
-          <h4>📝 Pastebin Website for Copy & Paste</h4>
+          <h4>📝 Pastebin Website </h4>
           <p>A simple website for sharing text snippets. By using HTML, CSS, JavaScript, Python, Flask, and SQLite3. I created a user-friendly interface that allows users to easily copy and paste their text, code, and more.</p>
           <a href="https://github.com/rishu143-ai/pastebin-clone" target="_blank">View Project</a>
         </div>
